--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/Background2.0.jpg) no-repeat top center scroll;
+    background: url(../img/NO_NIPS.jpg) no-repeat top center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
